[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-fondu-search-user-context"
version = "0.1.0"
description = "MCP server for searching user context using FONDU"
readme = "README.md"
authors = [
    {name = "FONDU Team", email = "team@youfondu.com"}
]
license = {text = "Proprietary"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "httpx>=0.26.0",
    "mcp>=1.3.0",
    "gunicorn>=21.2.0",
    "pydantic>=2.5.2",
    "python-dotenv>=1.0.0"
]
requires-python = ">=3.10"

[project.scripts]
mcp-fondu-search = "mcp_fondu_search_user_context.run:main"

[tool.setuptools]
packages = ["mcp_fondu_search_user_context"] 